--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "konva": "^2.6.0",
     "nodemon": "^1.18.10",
     "react": "^16.8.2",
+    "react-animation-frame": "^1.0.2",
     "react-dom": "^16.8.2",
     "react-konva": "^16.8.2-0",
     "react-scripts": "^2.1.5"
