--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "react-animation-frame": "^1.0.2",
     "react-dom": "^16.8.2",
     "react-konva": "^16.8.2-0",
-    "react-scripts": "^2.1.5"
+    "react-scripts": "^2.1.5",
+    "socket.io-client": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
