--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@types/koa-bodyparser": "^4.2.2",
     "@types/koa-multer": "^1.0.0",
     "@types/koa-router": "^7.0.39",
+    "@types/socket.io": "^2.1.2",
     "kcors": "^2.2.2",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
@@ -25,6 +26,7 @@
     "nodemon": "^1.18.10",
     "pg": "^7.8.0",
     "routing-controllers": "^0.7.7",
+    "socket.io": "^2.2.0",
     "ts-node": "^8.0.2",
     "typeorm": "^0.2.13",
     "typescript": "^3.3.3"
