--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,20 +1,26 @@
 {
     "compilerOptions": {
-      "module": "commonjs",
-      "moduleResolution": "node",
-      "noImplicitAny": false,
-      "noImplicitThis": true,
-      "noUnusedLocals": true,
-      "noUnusedParameters": true,
-      "removeComments": true,
-      "skipLibCheck": false,
-      "sourceMap": true,
-      "strictNullChecks": true,
-      "experimentalDecorators": true,
-      "emitDecoratorMetadata": true,
-      "target": "es2017",
-      "outDir": "build/",
-      "rootDir": "src/"
+        "module": "commonjs",
+        "moduleResolution": "node",
+        "noImplicitAny": false,
+        "noImplicitThis": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "removeComments": true,
+        "skipLibCheck": false,
+        "sourceMap": true,
+        "strictNullChecks": true,
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
+        "target": "es2017",
+        "types": [
+            "node"
+        ],
+        "typeRoots": [
+            "node_modules/@types"
+        ],
+        "outDir": "build/",
+        "rootDir": "src/"
     },
     "include": [
         "src/**/*"
@@ -23,5 +29,9 @@
         "node_modules",
         "**/*.spec.ts"
     ],
+    "typeRoots": [
+        "@typesCustom",
+        "node_modules/@types"
+    ],
     "compileOnSave": true
-  }
+}
