--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@types/koa-multer": "^1.0.0",
     "@types/koa-router": "^7.0.39",
     "@types/socket.io": "^2.1.2",
+    "bcrypt": "^3.0.4",
     "kcors": "^2.2.2",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
