--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,10 @@
     "react-animation-frame": "^1.0.2",
     "react-dom": "^16.8.2",
     "react-konva": "^16.8.2-0",
+    "react-redux": "^6.0.0",
     "react-scripts": "^2.1.5",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.2.0"
   },
   "scripts": {
