--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "react-scripts": "^2.1.5",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "socket.io-client": "^2.2.0"
+    "socket.io-client": "^2.2.0",
+    "superagent": "^4.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
